--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,6 @@
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
 
 # Editor directories and files
 .vscode/*
@@ -29,3 +19,9 @@ dist-ssr
 *.tfstate
 *.tfstate.backup
 .terraform.lock.hcl
+*.tfvars
+crash.log
+override.tf
+override.tf.json
+*-override.tf
+*-override.tf.json
